# dossier

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
deploy/: .env.example  docker-compose.yml  ofelia.ini
deploy/prometheus/: prometheus.yml
docs/: deployment.md  engine.md  inventory-schema.md  monitoring.md  tracker-schema.md
docs/adr/: ADR-001-public-private-data-separation.md  ADR-002-mit-license.md  ADR-003-python-project-layout.md  ADR-004-inventory-schema.md  ADR-005-application-tracker-persistence.md  ADR-006-engine-jd-analysis.md  ADR-007-multi-provider-llm.md  ADR-008-cv-generation.md  ADR-009-cover-letter-generation.md  ADR-010-containerization.md  ADR-011-ci-pipeline.md  ADR-012-deployment.md  ADR-013-observability.md  README.md
migrations/: env.py
migrations/versions/: a6c95afc692a_create_tracker_tables.py
src/dossier/: __init__.py  db.py  (+4 more)
tests/: conftest.py  engine_fakes.py  test_cli.py  test_cli_analyze.py  test_cli_generate.py  test_cli_track.py  test_config.py  test_config_provider.py  test_config_tracker.py  test_engine_analyzer.py  test_engine_client_factory.py  test_engine_gaps.py  test_engine_live.py  test_engine_models.py  test_engine_openai.py  test_generator_generator.py  test_generator_models.py  test_generator_render.py  test_generator_selector.py  test_loader.py  test_metrics.py  test_migrations.py  test_models.py  test_tracker_models.py  test_tracker_repository.py
(+29 files in other folders)
