[project]
name = "dossier"
version = "0.1.0"
description = "A personal job-search system that turns a structured inventory of professional experience into tailored CVs and cover letters."
readme = "README.md"
authors = [
    { name = "Dmitry Polischuk", email = "36130883+dimdimlv@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
dossier = "dossier:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "types-pyyaml>=6.0.12.20260518",
]
